--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -380,6 +380,7 @@ header .headNav .rightNav li .hidden.active {
 
 }
 
+
 /* 默认收藏夹 */
 .collections .default {
     display: flex;
@@ -393,7 +394,69 @@ header .headNav .rightNav li .hidden.active {
     overflow: hidden;
     width: 19%;
     margin: 0.5%;
+    border-radius: 5px;
     aspect-ratio: 16/9;
+}
+
+.collections .default .box .video {
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+}
+
+.collections .default .box>i.iconfont {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+
+    background-color: rgba(0, 0, 0, 0.49);
+    color: #f2f3f4;
+    text-align: center;
+    border-radius: 2px;
+    padding: 2px;
+    cursor: pointer;
+}
+
+.collections .default .box .video video {
+    height: 100%;
+    aspect-ratio: 16/9;
+    width: 100%;
+    background-color: #2c2c2c;
+}
+
+.collections .default .detailInfo {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+
+.collections .default .detailInfo p {
+    font-size: 15px;
+}
+
+.collections .default .detailInfo i {
+    font-style: normal;
+}
+
+.collections .default .detailInfo div p {
+    font-size: 12px;
+    color: #a09f9f;
+}
+
+.collections .default .detailInfo button {
+    width: 120px;
+    height: 30px;
+    border: none;
+    border-radius: 2px;
+    background-color: #00a1d6;
+    color: #fff;
+    transition: all 0.2s ease;
+}
+
+.collections .default .detailInfo button:hover {
+    background-color: #00a0d678;
+
 }
 
 /* 收藏的内容 */
@@ -532,11 +595,79 @@ header .headNav .rightNav li .hidden.active {
 /* 投稿模态框 */
 .inputTitle {
     position: fixed;
-    top: calc(50% - 100px);
+    top: calc(50% - 150px);
     left: calc(50% - 300px);
     width: 600px;
-    height: 200px;
+    height: 350px;
     background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    border-radius: 10px;
+    background-image: url('https://s1.hdslb.com/bfs/seed/jinkela/short/mini-login-v2/img/22_open.4ea5f239.png'), url('https://s1.hdslb.com/bfs/seed/jinkela/short/mini-login-v2/img/33_open.f7d7f655.png');
+    background-position: left bottom, right bottom;
+    background-size: 20%;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.inputTitle #title {
+    font-size: 30px;
+    font-weight: 700;
+    color: #fb7299;
+}
+
+.inputTitle .title,
+.inputTitle .describe {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.inputTitle .title input,
+.inputTitle .describe input {
+    width: 100%;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+
+.inputTitle .title input {
+    outline-color: #00a1d6;
+}
+
+.inputTitle .describe input {
+    outline-color: #fb7299;
+
+}
+
+.inputTitle .title p,
+.inputTitle .describe p {
+    margin-bottom: 20px;
+    color: #00a1d6;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.inputTitle .describe p {
+    color: #fb7299;
+
+}
+
+.inputTitle button {
+    width: 30%;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background-color: #fb7299;
+    color: #fff;
+    margin: 0 auto;
+}
+
+.inputTitle button:hover {
+    background-color: #fb729977;
+
 }
 
 .inputTitleMask {
@@ -547,13 +678,14 @@ header .headNav .rightNav li .hidden.active {
     width: 100vw;
     height: 100vh;
     content: "";
-    background-color: rgba(230, 9, 9, 0.09);
+    background-color: rgba(0, 0, 0, 0.301);
 }
 
 .inputTitle .close {
     position: absolute;
     top: 10px;
     right: 10px;
+    cursor: pointer;
 }
 
 
@@ -608,4 +740,60 @@ header .headNav .rightNav li .hidden.active {
 .dragSortingUp {
     animation: dragSortingUp .05s linear;
     animation-iteration-count: 1;
+}
+
+/* 中间搜索栏 */
+.content .collections .head {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: right;
+    height: 30px;
+    line-height: 30px;
+    margin: 20px 20px;
+}
+
+.content .collections .head div {
+    margin-left: 22px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.content .collections .head div:hover {
+    color: #02b5da;
+}
+
+.content .collections .head div>i:nth-of-type(-n+4) {
+    margin-left: 2px;
+}
+
+.content .collections .head .iconfont {
+    color: #a09f9f;
+}
+
+.content .collections .head .input {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    border-radius: 15px;
+    border: 1px solid #ccc;
+}
+
+.content .collections .head .input .search {
+    margin-right: 10px;
+}
+
+.content .collections .head .input input {
+    border: none;
+    font-size: 12px;
+    height: 100%;
+    border-left: 1px solid #ccc;
+    outline: none;
+    padding-left: 10px;
+}
+
+.content .collections .head .input div {
+    color: #a09f9f;
+    font-size: 12px;
+    padding: 5px;
+    margin: 0;
 }
