--- a/二轮考核/index.css
+++ b/二轮考核/index.css
@@ -1,9 +1,10 @@
 header {
     position: relative;
     width: 100%;
-    height: 250px;
+    height: 150px;
     background: url(http://localhost:5500/二轮考核/image/header.webp) no-repeat;
     background-size: cover;
+    background-position: center center;
 }
 
 header #logo {
@@ -27,6 +28,7 @@ header .subHidden {
     z-index: 1001;
     box-shadow: 0px 2px 3px #ccc;
     max-width: 2560px;
+    min-width: 1228px;
     opacity: 0;
     transition: all 0.2s ease;
 }
