--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -366,7 +366,19 @@ header .headNav .rightNav li .hidden.active {
 
 }
 
+.content .edit .myCreating ul li i.remove {
+    position: absolute;
+    right: 10px;
+    top: 0px;
+    color: rgba(204, 204, 204, 0.304);
+}
+
+.content .edit .myCreating ul li i.remove:hover {
+    color: #ccc;
+}
+
 .content .edit .myCreating ul li {
+    position: relative;
     padding-left: 20px;
     transition: all 0.3s;
 }
@@ -721,6 +733,7 @@ header .headNav .rightNav li .hidden.active {
 .content .edit ul {
     display: flex;
     flex-flow: column nowrap;
+    transition: all 0.2s ease;
 }
 
 .content .edit ul li {
@@ -814,4 +827,111 @@ header .headNav .rightNav li .hidden.active {
     font-size: 12px;
     padding: 5px;
     margin: 0;
+}
+
+/* 创建收藏夹模态框 */
+section.InfoBox {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 300px;
+    background-color: #fff;
+    z-index: 1004;
+    background-image: url('https://s1.hdslb.com/bfs/seed/jinkela/short/mini-login-v2/img/22_open.4ea5f239.png'), url('https://s1.hdslb.com/bfs/seed/jinkela/short/mini-login-v2/img/33_open.f7d7f655.png');
+    background-repeat: no-repeat;
+    background-position: left bottom, right bottom;
+    background-size: 20%;
+    border-radius: 10px;
+}
+
+section.InfoBox.active {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+}
+
+section.InfoBox .close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+    transition: 0.2s all ease;
+}
+
+section.InfoBox .close:hover {
+    color: #02b5da;
+}
+
+section.InfoBox h1 {
+    width: 60%;
+    margin: 0 auto;
+}
+
+section.InfoBox .input {
+    display: flex;
+    flex-flow: row nowrap;
+    width: 60%;
+    margin: 0 auto;
+    justify-content: left;
+    border: 1px #ccc solid;
+    border-radius: 10px;
+    height: 30px;
+    line-height: 30px;
+    padding-left: 10px;
+}
+
+section.InfoBox .input:hover {
+    border: 1px #fb7299 solid;
+
+}
+
+section.InfoBox .input input {
+    outline: none;
+    border: none;
+    padding-left: 10px;
+}
+
+section.InfoBox label {
+    text-align: center;
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+}
+
+section.InfoBox button {
+    display: block;
+    width: 30%;
+    height: 40px;
+    margin: 0 auto;
+    border-radius: 10px;
+    outline: none;
+    border: 1px #ccc solid;
+    background-color: #fb7299;
+    color: #fff;
+}
+
+section.InfoBox button:hover {
+    background-color: #fb7299b1;
+    cursor: pointer;
+
+}
+
+.InfoBoxMask {
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.342);
+    width: 100000px;
+    height: 100000px;
+    top: 0;
+    left: 0;
+    z-index: 1003;
+    transition: 0.2s all ease;
+}
+
+.InfoBoxMask.active {
+    display: block;
+
 }
