--- a/二轮考核/index_1536px.css
+++ b/二轮考核/index_1536px.css
@@ -34,3 +34,7 @@ header .subHidden .subHiddenBox .section {
 .hiddenMenu .input {
     margin-right: 50px;
 }
+
+.rightCenterNav ul li p {
+    display: none;
+}
