个人主页退出登录处理

--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -630,6 +630,14 @@ header .headNav .rightNav li .hidden.active {
     background-size: 25%;
 }
 
+.myClt.content .nodata {
+    height: 600px;
+    background-image: url(https://s1.hdslb.com/bfs/static/jinkela/space/assets/nodata02.png);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: 25%;
+}
+
 /* 投稿模态框 */
 .inputTitle {
     position: fixed;
